Creation of the patients controller: added the index method to display the list and integrated the HTML view using Thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=hospital
 server.port=8085
-spring.datasource.url = jdbc:h2:mem:patient-db
+spring.datasource.url=jdbc:h2:mem:patients-db
 spring.h2.console.enabled=true
