--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hospital
 server.port=8085
 #spring.datasource.url=jdbc:h2:mem:patients-db
 #spring.h2.console.enabled=true
-spring.datasource.url=jdbc:mysql://localhost:3307/hopital?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/hospital?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
